inline asset spacing issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -45,3 +45,7 @@
 .w-5 {
   width: 5%;
 }
+
+.w-95 {
+  width: 95%;
+}
